<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.kitkat.savingsmanagement.activities.AddSavingsItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <!-- Bank Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_bank_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/bank_title"
                        android:textSize="@dimen/text_size_medium"
                        android:textAlignment="center"/>

                    <EditText
                        android:id="@+id/edit_bank_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:inputType="textCapWords|textNoSuggestions"/>

            </LinearLayout>

            <!-- Start Date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/start_date"
                    android:textSize="@dimen/text_size_medium"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/edit_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:inputType="date" />

            </LinearLayout>

            <!-- End Date -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/end_date"
                    android:textSize="@dimen/text_size_medium"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/edit_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:inputType="date"/>

            </LinearLayout>

            <!-- Amount -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/amount"
                    android:textSize="@dimen/text_size_medium"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/edit_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <!-- Annualized Yield -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_annualized_yield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/annualized_yield"
                    android:textSize="@dimen/text_size_medium"
                    android:textAlignment="center"/>

                <EditText
                    android:id="@+id/edit_annualized_yield"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:inputType="numberDecimal"/>

            </LinearLayout>

            <!-- Expected Interest -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_expected_interest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/expected_interest"
                    android:textSize="@dimen/text_size_medium"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"/>

                <EditText
                    android:id="@+id/edit_expected_interest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="none"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <!-- Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/action_cancel"
            android:onClick="onCancelClicked"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/action_save"
            android:onClick="onSaveClicked"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </LinearLayout>

</LinearLayout>
